# Drover

./: .gitignore  FEATURES.md  LICENSE  README.md  package.json
.claude/: settings.local.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  files.rs  lib.rs  main.rs  mcp.rs  shell.rs  tools.rs
src/lib/: highlight.ts  kuratchi-agent-chat.ts  markdown.ts  pane-layout.ts  terminal-canvas.ts  terminal-emulator.ts  theme.ts  types.ts
src/lib/components/: CurlApp.svelte  DiffViewer.svelte  DigApp.svelte  EditorView.svelte  FileExplorer.svelte  MarkdownPreview.svelte  McpExplorer.svelte  OpensslApp.svelte  PaneContextMenu.svelte  PaneLayout.svelte  PaneTreeRenderer.svelte  PingApp.svelte  PortScanApp.svelte  SettingsPage.svelte  TracerouteApp.svelte  WhoisApp.svelte
src/routes/: +layout.svelte  +page.svelte
src/styles/: global.css
